# Sigmou-Bot

./: .editorconfig  .gitattributes  .gitignore  .tokeignore  Makefile  readme.md  requirements.txt  run.cmd  run.py  setup.cfg  setup.py  start.sh
.github/workflows/: codecov.yml  codeql-analysis.yml
app/: bot.py  constants.py  embeds.py  logging.py  timed_ctx.py  timer.py
app/cogs/: cog.template  errors.py  game.py  info.py  logging.py  moderation.py  others.py  time.py
app/components/: cog.template  errors.py  info.py  logging.py  moderation.py  utils.py
app/db/: .gitattributes  create.sqlite
app/utils/: db_wrapper.py  embeds.py  humanify.py  logging.py  timer.py
sigmou/: __init__.py  __main__.py  bot.py  constants.py  injection.py
sigmou/cogs/: __init__.py  game.py  info.py  time.py
sigmou/commands/: __init__.py  dev.py  info.py  leveling.py  moderation.py  time.py
sigmou/db/: create.sqlite
sigmou/events/: __init__.py  connection.py  messages.py
sigmou/logs/: .gitignore
sigmou/utils/: db_wrapper.py  humanify.py  logging.py  timer.py
tests/: test_bot_all_commands.py  test_humanify.py  test_timer.py
