[metadata]
name = sigmou
version = attr: sigmou.__version__
description = Just another discord bot
long_description = file: docs/README.md
long_description_content_type = text/markdown
author = attr: sigmou.__author__
author_email = edhyjox@gmail.com
url = https://github.com/Sigmanificient/Sigmou-Bot
keywords = discord,bots
license = MIT
classifiers =
  Intended Audience :: Developers
  Natural Language :: English
  Programming Language :: Python :: 3.10

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires =
  discord==0.16.1
  psutil~=5.9.2
  colorama~=0.4.5
  termcolor~=2.0.1
  aiosqlite~=0.17.0
  python-dotenv~=0.21.0
python_requires = >= 3.10

[options.entry_points]
console_scripts = sigmou=sigmou.__main__:main
